# OpenMP-PhaseField-Solver

./: ReadMe.md
model_b/: CMakeLists.txt  ReadMe.md  fpm.toml
model_b/app/: main_driver.f90
model_b/scripts/: build_linux.sh  build_mingw.bat  build_windows.ps1  windows_intel_build.txt
model_b/src/: core_utilities.f90  error_handler.f90  free_energy_kernel.f90  grid_generator.f90  io_handlers.f90  laplacian_kernel.f90  microstructure_initializer.f90  performance_analyzer.f90  performance_evaluation.f90  performance_timer.f90  phase_field_setup.f90  phase_field_solver.f90  precisions_control.f90  time_kernel.f90
model_b/visualization/: CMakeLists_old.txt  plot_benchmark.py  read_binary_ch.py
